agregado la clase para controlar ws (solo para los archivos php)

--- a/BibliotecaEISI(Proyecto)/res/values/strings.xml
+++ b/BibliotecaEISI(Proyecto)/res/values/strings.xml
@@ -199,4 +199,6 @@
     <string name="btnAgregarUsuarios">Agregar</string>
     <string name="textViewIdPrestamo">""</string>
     <string name="textview">TextView</string>
+    
+    <string name="hostGratuito">Hosting Gratuito</string>
 </resources>
