--- a/BibliotecaEISI(Proyecto)/res/values/strings.xml
+++ b/BibliotecaEISI(Proyecto)/res/values/strings.xml
@@ -12,6 +12,7 @@
         <item>Inicio</item>
         <item>Prestamos</item>
         <item>Entregas</item>
+        <item>Otros</item>
         <item>Cerrar Sesion</item>
     </string-array>
     <string-array name="opciones_crud">
@@ -35,16 +36,17 @@
     <string-array name="opciones_usuarios_secretaria">
         <item>Agregar Usuario</item>
     </string-array>
-
     <string-array name="opciones_prestamos_usuario">
         <item>Prestar Documentos</item>
         <item>Historial de Prestamos</item>
     </string-array>
-    
     <string-array name="opciones_entregas_usuario">
         <item>Historial de Entregas</item>
     </string-array>
-    
+    <string-array name="opciones_otras_usuario">
+        <item>Tomar foto de documento</item>
+    </string-array>
+
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     <string name="app_name">Biblioteca EISI</string>
@@ -99,7 +101,6 @@
     <string name="texViewPrueba"></string>
     <string name="buscar">Buscar</string>
     <string name="checkbox">CheckBox</string>
-    
     <string name="title1">Inicio de Sesion al Sistema</string>
     <string name="txtUser">Usuario: </string>
     <string name="txtPass">Contraseña:</string>
@@ -131,7 +132,6 @@
     <string name="titleDocActualizar">Actualuzar Documento</string>
     <string name="titleDocConsultar">Consultar Documento</string>
     <string name="titleDocAgregar">Agregar Documento</string>
-    
     <string name="Idautor">IdAutor</string>
     <string name="nombreautor">Nombre:</string>
     <string name="apellidoautor">Apellido:</string>
@@ -151,38 +151,37 @@
     <string name="Codigopais">Codigo Pais</string>
     <string name="editCodigopais"></string>
     <string name="nombrepais">Nombre Pais</string>
-    
     <string name="textArea1">AGREGAR AREA</string>
     <string name="textArea2">Id Area</string>
-	<string name="textArea3">Nombre</string>
-	<string name="textArea4">Descripcion</string>
-	<string name="buttonArea1">Agregar</string>
-	<string name="buttonArea2">Limpiar</string>
-	<string name="textAreaAct">ACTUALIZAR AREA</string>
-	<string name="buttonAreaAct">Actualizar</string>
-	<string name="textAreaConsul">CONSULTAR AREA</string>
-	<string name="textAreaConsul1">Resultado:</string>
-	<string name="buttonAreaConsul">Consultar</string>
-	<string name="textAreaEli1">Id Area:</string>
-	<string name="buttonAreaEli">Eliminar</string>
-	<string name="textPrestamoConsul">Numero Prestamo:</string>
-	<string name="textPrestamoResul">Resultados:</string>
-	<string name="buttonPrestamoConsul">Consultar</string>
-	<string name="buttonPrestamoConsul1">Limpiar</string>
-	<string name="textPrestamoResul1">Fecha de Prestamo:</string>
-	<string name="textPrestamoResul2">Fecha de Entrega:</string>
-	<string name="textPrestamoResul3">Libros Prestado:</string>
-	<string name="textPrestamoResul4">Estado:</string>
-	<string name="buttonAprobarPrest">Aprobar</string>
-	<string name="textAprobar1">Id Secretaria:</string>
-	<string name="textAprobar2">Id Usuario:</string>
-	<string name="txtViewPaises">Pais</string>
-	<string name="textViewNoResultados"></string>
-	<string name="textViewDetalleDocumento"></string>
-	<string name="agregarDocumentoPrestamo">Agregar Documento a Prestamo</string>
-	<string name="terminarPrestamoDocumento">Terminar prestamo de documento(s)</string>
-    
-	<!-- String para USUARIO insert -->
+    <string name="textArea3">Nombre</string>
+    <string name="textArea4">Descripcion</string>
+    <string name="buttonArea1">Agregar</string>
+    <string name="buttonArea2">Limpiar</string>
+    <string name="textAreaAct">ACTUALIZAR AREA</string>
+    <string name="buttonAreaAct">Actualizar</string>
+    <string name="textAreaConsul">CONSULTAR AREA</string>
+    <string name="textAreaConsul1">Resultado:</string>
+    <string name="buttonAreaConsul">Consultar</string>
+    <string name="textAreaEli1">Id Area:</string>
+    <string name="buttonAreaEli">Eliminar</string>
+    <string name="textPrestamoConsul">Numero Prestamo:</string>
+    <string name="textPrestamoResul">Resultados:</string>
+    <string name="buttonPrestamoConsul">Consultar</string>
+    <string name="buttonPrestamoConsul1">Limpiar</string>
+    <string name="textPrestamoResul1">Fecha de Prestamo:</string>
+    <string name="textPrestamoResul2">Fecha de Entrega:</string>
+    <string name="textPrestamoResul3">Libros Prestado:</string>
+    <string name="textPrestamoResul4">Estado:</string>
+    <string name="buttonAprobarPrest">Aprobar</string>
+    <string name="textAprobar1">Id Secretaria:</string>
+    <string name="textAprobar2">Id Usuario:</string>
+    <string name="txtViewPaises">Pais</string>
+    <string name="textViewNoResultados"></string>
+    <string name="textViewDetalleDocumento"></string>
+    <string name="agregarDocumentoPrestamo">Agregar Documento a Prestamo</string>
+    <string name="terminarPrestamoDocumento">Terminar prestamo de documento(s)</string>
+
+    <!-- String para USUARIO insert -->
     <string name="userTitleAgregar">Agregar Usuario</string>
     <string name="userTxtIdUsuario">ID Usuario</string>
     <string name="userTxtNombre">Nombre: </string>
@@ -192,13 +191,18 @@
     <string name="userTxtSi">Activo</string>
     <string name="userTxtNo">Inactivo</string>
     <string name="userTxtTipo">Seleccione Privilegios</string>
+
     <string-array name="privilegios_array">
         <item>Alumno</item>
         <item>Secretaria</item>
     </string-array>
+
     <string name="btnAgregarUsuarios">Agregar</string>
     <string name="textViewIdPrestamo">""</string>
     <string name="textview">TextView</string>
-    
     <string name="hostGratuito">Hosting Gratuito</string>
+    <string name="title_activity_tomar_foto">TomarFotoActivity</string>
+    <string name="strTomaFoto">Tomar Foto</string>
+    <string name="imagen1"> </string>
+
 </resources>
