--- a/BibliotecaEISI(Proyecto)/res/values/strings.xml
+++ b/BibliotecaEISI(Proyecto)/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string-array name="opciones_prestamos_usuario">
         <item>Prestar Documentos</item>
         <item>Historial de Prestamos</item>
+        <item>Imprimir hoja de prestamo</item>
     </string-array>
     <string-array name="opciones_entregas_usuario">
         <item>Historial de Entregas</item>
@@ -51,19 +52,7 @@
     <string name="drawer_close">Close navigation drawer</string>
     <string name="app_name">Biblioteca EISI</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="textViewInicioSesionUser">Usuario:</string>
-    <string name="textViewInicioSesionContrasena">Contrasena:</string>
-    <string name="buttonBase">Generar Base</string>
-    <string name="buttonInicioSesionIniciar">Iniciar Sesion Secretaria</string>
-    <string name="buttonInicioSesionIniciarU">Iniciar Sesion Usuario</string>
-    <string name="buttonMenuBibliotecaAreas">Areas de aplicacion</string>
-    <string name="buttonMenuBibliotecaDocumentos">Documentos</string>
-    <string name="buttonMenuBibliotecaEditoriales">Editoriales</string>
-    <string name="buttonMenuBibliotecaAutores">Autores</string>
-    <string name="buttonMenuBibliotecaPaises">Paises</string>
     <string name="title_activity_menu_secretaria">Menu Secretaria</string>
-    <string name="title_activity_menu_biblioteca">Biblioteca</string>
     <string name="title_activity_aprobar_prestamo">Aprobar Prestamos</string>
     <string name="title_activity_consultar_prestamos">Consultar Prestamos</string>
     <string name="title_activity_agregar_usuario">Agregar Usuario</string>
@@ -98,19 +87,11 @@
     <string name="idEditorial">id Editorial</string>
     <string name="actualizarEditorial">Actualizar Editorial</string>
     <string name="btnEliminarEditorial">Eliminar Editorial</string>
-    <string name="texViewPrueba"></string>
     <string name="buscar">Buscar</string>
-    <string name="checkbox">CheckBox</string>
     <string name="title1">Inicio de Sesion al Sistema</string>
-    <string name="txtUser">Usuario: </string>
-    <string name="txtPass">Contraseña:</string>
     <string name="promtUser">Usuario</string>
     <string name="promtPass">Contraseña</string>
     <string name="btnIniciar">Iniciar Sesion</string>
-    <string name="saludoSecre">Bienvenida Secretaria</string>
-    <string name="saludoAlum">Bienvenido Alumno</string>
-    <string name="btnSalirAlum">Salir</string>
-    <string name="btnSalirSecre">Salir X</string>
     <string name="large_text">Bienvenido a Biblioteca EISI</string>
     <string name="large_text2"></string>
     <string name="txvId">ID Documento:</string>
@@ -142,14 +123,7 @@
     <string name="eliminar">Eliminar</string>
     <string name="actualizar">Actualizar</string>
     <string name="Consultar">Consultar</string>
-    <string name="listViewConsultaPrestamo"></string>
-    <string name="Iddoc">ID_Documento</string>
-    <string name="editDoc"></string>
-    <string name="usuario">ID_Usuario</string>
-    <string name="editusuario"></string>
-    <string name="entregar">Entregar Documento</string>
     <string name="Codigopais">Codigo Pais</string>
-    <string name="editCodigopais"></string>
     <string name="nombrepais">Nombre Pais</string>
     <string name="textArea1">AGREGAR AREA</string>
     <string name="textArea2">Id Area</string>
@@ -166,15 +140,11 @@
     <string name="buttonAreaEli">Eliminar</string>
     <string name="textPrestamoConsul">Numero Prestamo:</string>
     <string name="textPrestamoResul">Resultados:</string>
-    <string name="buttonPrestamoConsul">Consultar</string>
-    <string name="buttonPrestamoConsul1">Limpiar</string>
     <string name="textPrestamoResul1">Fecha de Prestamo:</string>
     <string name="textPrestamoResul2">Fecha de Entrega:</string>
     <string name="textPrestamoResul3">Libros Prestado:</string>
     <string name="textPrestamoResul4">Estado:</string>
     <string name="buttonAprobarPrest">Aprobar</string>
-    <string name="textAprobar1">Id Secretaria:</string>
-    <string name="textAprobar2">Id Usuario:</string>
     <string name="txtViewPaises">Pais</string>
     <string name="textViewNoResultados"></string>
     <string name="textViewDetalleDocumento"></string>
@@ -199,13 +169,10 @@
 
     <string name="btnAgregarUsuarios">Agregar</string>
     <string name="textViewIdPrestamo">""</string>
-    <string name="textview">TextView</string>
     <string name="hostGratuito">Hosting Gratuito</string>
     <string name="title_activity_tomar_foto">TomarFotoActivity</string>
     <string name="strTomaFoto">Tomar Foto</string>
     <string name="imagen1"></string>
-    <string name="title_activity_speech_busqueda_documento">SpeechBusquedaDocumentoActivity</string>
-    <string name="btnTalk">Hable ahora</string>
     <string name="buscarSpeech">Busqueda por voz</string>
     <string name="title_activity_imprimir_hoja_prestamo">ImprimirHojaPrestamoActivity</string>
     <string name="print_string">Imprimir</string>
